--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Shannyn Wilson — UX Designer</title>
+  <link rel="stylesheet" href="styles.css"/>
+</head>
+<body>
+  <section class="hero">
+    <h1>Hello, I'm Shannyn.</h1>
+    <p>UX Designer and Data Visualization Enthusiast.</p>
+    <a href="#portfolio" class="btn">View My Work</a>
+  </section>
+
+  <section id="portfolio">
+    <h2>Portfolio</h2>
+    <p><a href="https://www.figma.com/design/3sPR4wmCXAXaOdPYVSFedo/Portfolio?node-id=0-1&p=f&t=AqqQZfX3YiWvVp2x-0" target="_blank">Open Figma Portfolio</a></p>
+    <!-- Optionally embed the Figma preview -->
+    <iframe style="border: 1px solid #ccc;" width="100%" height="450" src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/design/3sPR4wmCXAXaOdPYVSFedo/Portfolio?node-id=0-1&t=AqqQZfX3YiWvVp2x-0" allowfullscreen></iframe>
+  </section>
+
+  <footer>
+    <p>© 2025 Shannyn Wilson</p>
+  </footer>
+</body>
+</html>
 
