--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Shannyn Wilson — UX Portfolio</title>
+  <title>Shannon Wilson — UX Portfolio</title>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
@@ -35,7 +35,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Shannyn Wilson • <a href="mailto:youremail@example.com">Contact Me</a></p>
+    <p>© 2025 Shannon Wilson • <a href="mailto:youremail@example.com">Contact Me</a></p>
   </footer>
 </body>
 </html>
