--- a/index.html
+++ b/index.html
@@ -115,6 +115,20 @@
       </div>
       <a href="quest-gasket.html" class="view-button">View Project</a>
     </div>
+
+    <div class="project-card">
+      <h2>Flying Wings – White Label Booking Experience</h2>
+      <p class="project-summary">
+        Designed a responsive, white-label flight booking experience including search, results, and checkout flow for client onboarding and sales demo.
+      </p>
+      <div class="project-tags">
+        <p><strong>Project Type:</strong> End-to-End Prototype for White Label Platform</p>
+        <p><strong>Role:</strong> UX/UI Designer & Prototype Creator</p>
+        <p><strong>Industry:</strong> Travel & Tourism (B2B SaaS)</p>
+        <p><strong>Tools:</strong> Figma, Clickable Prototype, UX Research</p>
+      </div>
+      <a href="flying-wings.html" class="view-button">View Project</a>
+    </div>
   </main>
 
   <footer>
@@ -123,3 +137,4 @@
 
 </body>
 </html>
+
