--- a/index.html
+++ b/index.html
@@ -129,6 +129,21 @@
       </div>
       <a href="flying-wings.html" class="view-button">View Project</a>
     </div>
+
+  <div class="project-card">
+    <h2>SocialSync – Profile & Login UX Enhancements</h2>
+    <p class="project-summary">
+    Redesigned mobile and desktop flows with a modern user profile, social integrations, and login experience for improved usability and visual consistency.
+    </p>
+    <div class="project-tags">
+    <p><strong>Project Type:</strong> UI/UX Design – Mobile + Desktop Screens</p>
+    <p><strong>Role:</strong> UI Designer & Interaction Strategist</p>
+    <p><strong>Industry:</strong> Social Media / Web App</p>
+    <p><strong>Tools:</strong> Figma, Wireframes, UI Kit</p>
+  </div>
+  <a href="socialsync.html" class="view-button">View Project</a>
+</div>
+    
   </main>
 
   <footer>
