--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </p>
       <div class="project-tags">
         <p><strong>Project Type:</strong> End-to-end Website + Branding</p>
-        <p><strong>Role:</strong> Sole UX/UI Designer</p>
+        <p><strong>Role:</strong> Sole UX/UI Researcher + Designer</p>
         <p><strong>Industry:</strong> Industrial Sealing / Manufacturing</p>
         <p><strong>Tools:</strong> Balsamiq, Figma</p>
       </div>
@@ -117,29 +117,29 @@
     </div>
 
     <div class="project-card">
-      <h2>Flying Wings – White Label Booking Experience</h2>
+      <h2>Flying Wings</h2>
       <p class="project-summary">
         Designed a responsive, white-label flight booking experience including search, results, and checkout flow for client onboarding and sales demo.
       </p>
       <div class="project-tags">
         <p><strong>Project Type:</strong> End-to-End Prototype for White Label Platform</p>
-        <p><strong>Role:</strong> UX/UI Designer & Prototype Creator</p>
+        <p><strong>Role:</strong> Sole UX/UI Researcher + Prototype Creator</p>
         <p><strong>Industry:</strong> Travel & Tourism (B2B SaaS)</p>
-        <p><strong>Tools:</strong> Figma, Clickable Prototype, UX Research</p>
+        <p><strong>Tools:</strong> Balsamiq, Figma, Zoom</p>
       </div>
       <a href="flying-wings.html" class="view-button">View Project</a>
     </div>
 
   <div class="project-card">
-    <h2>SocialSync – Profile & Login UX Enhancements</h2>
+    <h2>House of Rock</h2>
     <p class="project-summary">
     Redesigned mobile and desktop flows with a modern user profile, social integrations, and login experience for improved usability and visual consistency.
     </p>
     <div class="project-tags">
     <p><strong>Project Type:</strong> UI/UX Design – Mobile + Desktop Screens</p>
-    <p><strong>Role:</strong> UI Designer & Interaction Strategist</p>
-    <p><strong>Industry:</strong> Social Media / Web App</p>
-    <p><strong>Tools:</strong> Figma, Wireframes, UI Kit</p>
+    <p><strong>Role:</strong> Sole UX/UI Researcher + Interaction Strategist</p>
+    <p><strong>Industry:</strong> Travel & Tourism / Social Media</p>
+    <p><strong>Tools:</strong> Figma, Illustrator, Test Flight, Slack</p>
   </div>
   <a href="socialsync.html" class="view-button">View Project</a>
 </div>
