--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
 
   <header>
     <h1>Shannon Wilson</h1>
-    <p>UX Designer & Data Visualization Storyteller</p>
+    <img src="assets/images/shannyn.png" alt="Cartoon of Shannon" class="profile-pic">
+    <p>UX/UI Designer</p>
   </header>
 
   <main>
