--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <p><strong>Industry:</strong> Travel & Tourism / Social Media</p>
     <p><strong>Tools:</strong> Figma, Illustrator, Test Flight, Slack</p>
   </div>
-  <a href="socialsync.html" class="view-button">View Project</a>
+  <a href="house-of-rock.html" class="view-button">View Project</a>
 </div>
     
   </main>
