--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 
 <body class="case-study-body">
 
+  <!-- NAV BAR -->
+  <nav class="site-nav">
+    <div class="site-nav-inner">
+      <a href="index.html" class="site-nav-brand">Shannon Wilson</a>
+      <div class="site-nav-links">
+        <a href="index.html#work">Work</a>
+      </div>
+    </div>
+  </nav>
+
+
   <!-- HEADER / HERO -->
   <header class="home-header">
     <div class="home-header-inner">
@@ -28,7 +39,7 @@
 
   <!-- MAIN CONTENT -->
   <main class="cs-main">
-    <section class="cs-section project-list">
+    <section id="work" class="cs-section project-list">
 
       <article class="project-card">
         <h2>Quest Gasket</h2>
