--- a/quest-gasket.html
+++ b/quest-gasket.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="case-study-body">
+    <nav class="site-nav">
+      <div class="site-nav-inner">
+        <a href="index.html" class="site-nav-brand">Shannon Wilson</a>
+        <div class="site-nav-links">
+          <a href="index.html#work">Work</a>
+      </div>
+    </div>
+  </nav>
+
   <header class="cs-header">
     <a href="index.html" class="cs-back-link">← Back to home</a>
   </header>
