--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 
 <body class="case-study-body">
 
-  <!-- NAV BAR -->
-  <nav class="site-nav">
-    <div class="site-nav-inner">
-      <a href="index.html" class="site-nav-brand">Shannon Wilson</a>
-      <div class="site-nav-links">
-        <a href="index.html#work">Work</a>
-      </div>
+
+<!-- NAV BAR -->
+<nav class="site-nav">
+  <div class="site-nav-inner">
+    <a href="index.html" class="site-nav-brand">Shannon Wilson</a>
+    <div class="site-nav-links">
+      <a href="index.html#work">Work</a>
+      <a href="about.html">About</a>
     </div>
-  </nav>
+  </div>
+</nav>
+
 
 
   <!-- HEADER / HERO -->
