--- a/house-of-rock.html
+++ b/house-of-rock.html
@@ -7,14 +7,17 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="case-study-body">
-    <nav class="site-nav">
-      <div class="site-nav-inner">
-        <a href="index.html" class="site-nav-brand">Shannon Wilson</a>
-        <div class="site-nav-links">
-          <a href="index.html#work">Work</a>
-      </div>
+   <!-- NAV BAR -->
+<nav class="site-nav">
+  <div class="site-nav-inner">
+    <a href="index.html" class="site-nav-brand">Shannon Wilson</a>
+    <div class="site-nav-links">
+      <a href="index.html#work">Work</a>
+      <a href="about.html">About</a>
     </div>
-  </nav>
+  </div>
+</nav>
+
 
   <header class="cs-header">
     <a href="index.html" class="cs-back-link">← Back to home</a>
