--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
 <body class="case-study-body">
 
-  <!-- NAV -->
+  <!-- NAV BAR -->
   <nav class="site-nav">
     <div class="site-nav-inner">
       <a href="index.html" class="site-nav-brand">Shannon Wilson</a>
@@ -21,56 +21,70 @@
   </nav>
 
   <main class="cs-main">
-    <section class="cs-section">
-      <h1 class="cs-title">About Me</h1>
 
-      <p class="cs-intro">
-        I’m a UX/UI Designer who blends design clarity with real-world logic.  
-        I specialize in simplifying complex systems — from travel booking flows to enterprise platforms —
-        and making them feel intuitive, calm, and approachable.
-      </p>
+    <!-- COLOURED HERO BLOCK -->
+    <section class="about-hero">
+      <div class="about-hero-inner">
+        <img
+          src="assets/images/shannyn.png"
+          alt="Cartoon illustration of Shannon"
+          class="about-hero-image"
+        />
+        <div class="about-hero-text">
+          <h1>Shannon Wilson</h1>
+          <p class="about-hero-role">UX / UI Designer</p>
+          <p class="about-hero-copy">
+            I design calm, intuitive interfaces for complex systems — from travel booking flows to industrial sites and social platforms. 
+            I love taking messy, ambiguous ideas and turning them into clear flows and interfaces.
+          </p>
+        </div>
+      </div>
+    </section>
 
-      <div class="cs-two-column">
+    <!-- WHITE CONTENT SECTION -->
+    <section class="cs-section about-content">
+      <div class="about-grid">
         <div>
-          <h2 class="cs-subtitle">What I Bring</h2>
-          <ul class="cs-list">
-            <li>UX/UI design for complex flows and multi-step systems</li>
-            <li>Wireframing and prototyping (Balsamiq, Figma)</li>
-            <li>Service design thinking & process improvements</li>
-            <li>Data visualization background (Tableau, analytics)</li>
-            <li>12+ years in benefits & pension operations and SaaS systems</li>
+          <h2>What I Do</h2>
+          <p>
+            I focus on end-to-end UX: understanding the problem, mapping flows, and designing interfaces 
+            that feel straightforward, even when the logic underneath is not.
+          </p>
+          <ul>
+            <li>Product and marketing site UX/UI</li>
+            <li>Complex flows (booking, checkout, dashboards)</li>
+            <li>Wireframes, prototypes, design systems</li>
+            <li>Collaborating with devs during handoff</li>
           </ul>
         </div>
 
         <div>
-          <h2 class="cs-subtitle">Tools I Use</h2>
-          <ul class="cs-list">
-            <li>Figma / Balsamiq</li>
-            <li>Illustrator</li>
-            <li>Tableau / SQL (beginner)</li>
-            <li>Miro / JIRA / Confluence</li>
+          <h2>Background</h2>
+          <p>
+            I come from a background in benefits, pensions, SaaS, and data visualization — giving me 
+            a strong lens for both business constraints and user needs.
+          </p>
+          <ul>
+            <li>12+ years in benefits & pension operations</li>
+            <li>UX/UI design for B2B and B2C products</li>
+            <li>Hands-on experience with Figma, Balsamiq, Tableau</li>
           </ul>
         </div>
       </div>
 
-      <h2 class="cs-subtitle">My Approach</h2>
-      <p>
-        My work is guided by clarity, structure, and empathy.  
-        I’m at my best when translating scattered requirements into something shaped, understandable,
-        and visually aligned. I care about flows, friction points, and how people *feel* as they move
-        through a design.
+      <h2>Tools I Work With</h2>
+      <p class="about-tools">
+        Figma · Balsamiq · Illustrator · Miro · Jira · Confluence · Tableau · basic SQL
       </p>
 
-      <h2 class="cs-subtitle">Let’s Connect</h2>
+      <h2>Let’s Connect</h2>
       <p>
-        You can reach me at:
-        <br>
-        <strong>Email:</strong> your-email-here  
-        <br>
-        <strong>LinkedIn:</strong> Add link here  
+        You can reach me at:<br>
+        <strong>Email:</strong> your-email-here<br>
+        <strong>LinkedIn:</strong> your-LinkedIn-link-here
       </p>
-
     </section>
+
   </main>
 
   <footer class="cs-footer">
@@ -79,3 +93,4 @@
 
 </body>
 </html>
+
