--- a/about.html
+++ b/about.html
@@ -20,35 +20,35 @@
     </div>
   </nav>
 
-  <main class="cs-main">
-
-    <!-- COLOURED HERO BLOCK -->
-    <section class="about-hero">
-      <div class="about-hero-inner">
-        <img
-          src="assets/images/shannyn.png"
-          alt="Cartoon illustration of Shannon"
-          class="about-hero-image"
-        />
-        <div class="about-hero-text">
-          <h1>Shannon Wilson</h1>
-          <p class="about-hero-role">UX / UI Designer</p>
-          <p class="about-hero-copy">
-            I design calm, intuitive interfaces for complex systems — from travel booking flows to industrial sites and social platforms. 
-            I love taking messy, ambiguous ideas and turning them into clear flows and interfaces.
-          </p>
-        </div>
+  <!-- FULL-WIDTH COLOURED HERO BLOCK -->
+  <section class="about-hero">
+    <div class="about-hero-inner">
+      <div class="about-hero-text">
+        <h1>Shannon Wilson</h1>
+        <p class="about-hero-role">UX / UI Designer</p>
+        <p class="about-hero-copy">
+          I design intuitive interfaces for complex systems — from travel booking flows to
+          industrial sites and social platforms. I love taking messy, ambiguous ideas and
+          turning them into clear flows and experiences.
+        </p>
       </div>
-    </section>
+      <img
+        src="assets/images/shannyn.png"
+        alt="Cartoon illustration of Shannon"
+        class="about-hero-image"
+      />
+    </div>
+  </section>
 
-    <!-- WHITE CONTENT SECTION -->
+  <!-- WHITE CONTENT AREA -->
+  <main class="cs-main">
     <section class="cs-section about-content">
       <div class="about-grid">
         <div>
           <h2>What I Do</h2>
           <p>
-            I focus on end-to-end UX: understanding the problem, mapping flows, and designing interfaces 
-            that feel straightforward, even when the logic underneath is not.
+            I focus on end-to-end UX: understanding the problem, mapping flows, and designing
+            interfaces that feel straightforward, even when the logic underneath is not.
           </p>
           <ul>
             <li>Product and marketing site UX/UI</li>
@@ -61,11 +61,11 @@
         <div>
           <h2>Background</h2>
           <p>
-            I come from a background in benefits, pensions, SaaS, and data visualization — giving me 
+            I come from a background in benefits, pensions, SaaS, and data visualization — giving me
             a strong lens for both business constraints and user needs.
           </p>
           <ul>
-            <li>12+ years in benefits & pension operations</li>
+            <li>12+ years in benefits &amp; pension operations</li>
             <li>UX/UI design for B2B and B2C products</li>
             <li>Hands-on experience with Figma, Balsamiq, Tableau</li>
           </ul>
@@ -84,7 +84,6 @@
         <strong>LinkedIn:</strong> your-LinkedIn-link-here
       </p>
     </section>
-
   </main>
 
   <footer class="cs-footer">
@@ -93,4 +92,5 @@
 
 </body>
 </html>
+
 
