--- a/index.html
+++ b/index.html
@@ -2,93 +2,100 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shannon Wilson — UX Portfolio</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body class="case-study-body">
 
-
-<!-- NAV BAR -->
-<nav class="site-nav">
-  <div class="site-nav-inner">
-    <a href="index.html" class="site-nav-brand">Shannon Wilson</a>
-    <div class="site-nav-links">
-      <a href="index.html#work">Work</a>
-      <a href="about.html">About</a>
+  <!-- TOP NAV -->
+  <nav class="site-nav">
+    <div class="site-nav-inner">
+      <a href="index.html" class="site-nav-brand">Shannon Wilson</a>
+      <div class="site-nav-links">
+        <a href="index.html">Work</a>
+        <a href="about.html">About</a>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-
-
-  <!-- HEADER / HERO -->
+  <!-- HELLO / INTRO SECTION -->
   <header class="home-header">
     <div class="home-header-inner">
       <div class="home-identity">
-        <img src="assets/images/shannyn.png" alt="Cartoon of Shannon" class="profile-pic">
+        <img
+          src="assets/images/shannyn.png"
+          alt="Avatar of Shannon Wilson"
+          class="profile-pic"
+        />
         <div>
-          <h1>Shannon Wilson</h1>
-          <p class="home-tagline">UX/UI designer crafting clear, intuitive experiences for complex products.</p>
+          <h1>Hello, I’m Shannon Wilson</h1>
+          <p class="home-tagline">UX / UI Designer focused on clear, intuitive experiences for complex products.</p>
         </div>
       </div>
       <p class="home-subtext">
-        I blend experience in benefits, pensions, SaaS, and data visualization to design interfaces that
-        feel calm and usable, even when the systems behind them are complex.
+        I design interfaces for systems that can be messy under the surface — travel bookings, industrial tools,
+        and social platforms — and make them feel calm, understandable, and easy to use. Below are a selection
+        of case studies that represent how I work end-to-end.
       </p>
     </div>
   </header>
 
-  <!-- MAIN CONTENT -->
-  <main class="cs-main">
-    <section id="work" class="cs-section project-list">
+  <!-- MAIN WORK SECTION -->
+  <main class="cs-main" id="work">
+    <section class="cs-section">
+      <div class="project-list">
 
-      <article class="project-card">
-        <h2>Quest Gasket</h2>
-        <p class="project-summary">
-          A complete redesign of Quest Gasket’s industrial website, including a new sitemap,
-          e-commerce structure, and UX-focused product navigation system.
-        </p>
-        <div class="project-tags">
-          <p><strong>Project Type:</strong> End-to-end Website + Branding</p>
-          <p><strong>Role:</strong> Sole UX/UI Researcher + Designer</p>
-          <p><strong>Industry:</strong> Industrial Sealing / Manufacturing</p>
-          <p><strong>Tools:</strong> Balsamiq, Figma</p>
-        </div>
-        <a href="quest-gasket.html" class="view-button">View Project</a>
-      </article>
+        <!-- QUEST GASKET -->
+        <article class="project-card">
+          <h2>Quest Gasket</h2>
+          <p class="project-summary">
+            A complete redesign of an industrial gasket supplier’s website, including a new sitemap, 
+            e-commerce structure, and UX-focused product navigation system.
+          </p>
+          <div class="project-tags">
+            <p><strong>Project Type:</strong> End-to-end Website + Branding</p>
+            <p><strong>Role:</strong> Sole UX/UI Researcher + Designer</p>
+            <p><strong>Industry:</strong> Industrial Sealing / Manufacturing</p>
+            <p><strong>Tools:</strong> Balsamiq, Figma</p>
+          </div>
+          <a href="quest-gasket.html" class="view-button">View Case Study</a>
+        </article>
 
-      <article class="project-card">
-        <h2>Flying Wings</h2>
-        <p class="project-summary">
-          Designed a responsive, white-label flight booking experience including search, results,
-          and checkout flow for client onboarding and sales demos.
-        </p>
-        <div class="project-tags">
-          <p><strong>Project Type:</strong> End-to-End Prototype for White Label Platform</p>
-          <p><strong>Role:</strong> Sole UX/UI Researcher + Prototype Creator</p>
-          <p><strong>Industry:</strong> Travel & Tourism (B2B SaaS)</p>
-          <p><strong>Tools:</strong> Balsamiq, Figma, Zoom</p>
-        </div>
-        <a href="flying-wings.html" class="view-button">View Project</a>
-      </article>
+        <!-- FLYING WINGS -->
+        <article class="project-card">
+          <h2>Flying Wings</h2>
+          <p class="project-summary">
+            A white-label travel booking experience including search, results, and checkout flow for a
+            client-based airline platform, built to be rebranded for multiple partners.
+          </p>
+          <div class="project-tags">
+            <p><strong>Project Type:</strong> End-to-End Prototype for White Label Platform</p>
+            <p><strong>Role:</strong> Sole UX/UI Researcher + Prototype Creator</p>
+            <p><strong>Industry:</strong> Travel &amp; Tourism (B2B SaaS)</p>
+            <p><strong>Tools:</strong> Balsamiq, Figma, Zoom</p>
+          </div>
+          <a href="flying-wings.html" class="view-button">View Case Study</a>
+        </article>
 
-      <article class="project-card">
-        <h2>House of Rock</h2>
-        <p class="project-summary">
-          Redesigning mobile and desktop flows for a concert + travel booking platform with modern
-          profiles, social integrations, and trip-building experiences.
-        </p>
-        <div class="project-tags">
-          <p><strong>Project Type:</strong> UI/UX Design – Mobile + Desktop Screens</p>
-          <p><strong>Role:</strong> Sole UX/UI Researcher + Interaction Strategist</p>
-          <p><strong>Industry:</strong> Travel & Tourism / Social Media</p>
-          <p><strong>Tools:</strong> Figma, Illustrator, TestFlight, Slack</p>
-        </div>
-        <a href="house-of-rock.html" class="view-button">View Project</a>
-      </article>
+        <!-- HOUSE OF ROCK -->
+        <article class="project-card">
+          <h2>House of Rock</h2>
+          <p class="project-summary">
+            Ongoing UX and UI design for a concert + travel booking platform, including mobile bandmate
+            social flows, desktop trip-building, and component design for future features.
+          </p>
+          <div class="project-tags">
+            <p><strong>Project Type:</strong> UI/UX Design – Mobile + Desktop Screens</p>
+            <p><strong>Role:</strong> Sole UX/UI Researcher + Interaction Strategist</p>
+            <p><strong>Industry:</strong> Travel &amp; Tourism / Social Media</p>
+            <p><strong>Tools:</strong> Figma, Illustrator, TestFlight, Slack</p>
+          </div>
+          <a href="house-of-rock.html" class="view-button">View Case Study</a>
+        </article>
 
+      </div>
     </section>
   </main>
 
