--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 
         <!-- QUEST GASKET -->
         <article class="project-card">
+
+           <img src="assets/images/quest-gasket-thumbnail.png"
+             alt="Quest Gasket website redesign preview"
+             class="project-thumb">
+          
           <h2>Quest Gasket</h2>
           <p class="project-summary">
             A complete redesign of an industrial gasket supplier’s website, including a new sitemap, 
