--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- QUEST GASKET -->
         <article class="project-card">
 
-           <img src="assets/images/quest-gasket-thumbnail.png"
+           <img src="assets/images/quest-gasket-thumbnail.svg"
              alt="Quest Gasket website redesign preview"
              class="project-thumb">
           
