--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
         />
         <div>
           <h1>Hello, I’m Shannon Wilson</h1>
-          <p class="home-tagline">UX / UI Designer focused on clear, intuitive experiences for complex products.</p>
+          <p class="home-tagline">
+            UX / UI Designer focused on clear, intuitive experiences for complex products.
+          </p>
         </div>
       </div>
       <p class="home-subtext">
-        I design interfaces for systems that can be messy under the surface — travel bookings, industrial tools,
-        and social platforms — and make them feel calm, understandable, and easy to use. Below are a selection
-        of case studies that represent how I work end-to-end.
+        I design interfaces for systems that can be messy under the surface — travel bookings,
+        industrial tools, and social platforms — and make them feel calm, understandable, and
+        easy to use. Below are a selection of case studies that represent how I work end-to-end.
       </p>
     </div>
   </header>
@@ -48,56 +50,75 @@
       <div class="project-list">
 
         <!-- QUEST GASKET -->
-        <article class="project-card">
+        <article class="project-card split-layout">
+          <img
+            src="assets/images/quest-gasket-thumbnail.svg"
+            alt="Quest Gasket website redesign preview"
+            class="project-thumb"
+          />
 
-           <img src="assets/images/quest-gasket-thumbnail.svg"
-             alt="Quest Gasket website redesign preview"
-             class="project-thumb">
-          
-          <h2>Quest Gasket</h2>
-          <p class="project-summary">
-            A complete redesign of an industrial gasket supplier’s website, including a new sitemap, 
-            e-commerce structure, and UX-focused product navigation system.
-          </p>
-          <div class="project-tags">
-            <p><strong>Project Type:</strong> End-to-end Website + Branding</p>
-            <p><strong>Role:</strong> Sole UX/UI Researcher + Designer</p>
-            <p><strong>Industry:</strong> Industrial Sealing / Manufacturing</p>
-            <p><strong>Tools:</strong> Balsamiq, Figma</p>
+          <div class="project-info">
+            <h2>Quest Gasket</h2>
+            <p class="project-summary">
+              A complete redesign of an industrial gasket supplier’s website, including a new sitemap,
+              e-commerce structure, and UX-focused product navigation system.
+            </p>
+            <div class="project-tags">
+              <p><strong>Project Type:</strong> End-to-end Website + Branding</p>
+              <p><strong>Role:</strong> Sole UX/UI Researcher + Designer</p>
+              <p><strong>Industry:</strong> Industrial Sealing / Manufacturing</p>
+              <p><strong>Tools:</strong> Balsamiq, Figma</p>
+            </div>
+            <a href="quest-gasket.html" class="view-button">View Case Study</a>
           </div>
-          <a href="quest-gasket.html" class="view-button">View Case Study</a>
         </article>
 
         <!-- FLYING WINGS -->
-        <article class="project-card">
-          <h2>Flying Wings</h2>
-          <p class="project-summary">
-            A white-label travel booking experience including search, results, and checkout flow for a
-            client-based airline platform, built to be rebranded for multiple partners.
-          </p>
-          <div class="project-tags">
-            <p><strong>Project Type:</strong> End-to-End Prototype for White Label Platform</p>
-            <p><strong>Role:</strong> Sole UX/UI Researcher + Prototype Creator</p>
-            <p><strong>Industry:</strong> Travel &amp; Tourism (B2B SaaS)</p>
-            <p><strong>Tools:</strong> Balsamiq, Figma, Zoom</p>
+        <article class="project-card split-layout">
+          <img
+            src="assets/images/flying-wings-thumbnail.svg"
+            alt="Flying Wings flight booking UX prototype preview"
+            class="project-thumb"
+          />
+
+          <div class="project-info">
+            <h2>Flying Wings</h2>
+            <p class="project-summary">
+              A white-label travel booking experience including search, results, and checkout flow
+              for a client-based airline platform, built to be rebranded for multiple partners.
+            </p>
+            <div class="project-tags">
+              <p><strong>Project Type:</strong> End-to-End Prototype for White Label Platform</p>
+              <p><strong>Role:</strong> Sole UX/UI Researcher + Prototype Creator</p>
+              <p><strong>Industry:</strong> Travel &amp; Tourism (B2B SaaS)</p>
+              <p><strong>Tools:</strong> Balsamiq, Figma, Zoom</p>
+            </div>
+            <a href="flying-wings.html" class="view-button">View Case Study</a>
           </div>
-          <a href="flying-wings.html" class="view-button">View Case Study</a>
         </article>
 
         <!-- HOUSE OF ROCK -->
-        <article class="project-card">
-          <h2>House of Rock</h2>
-          <p class="project-summary">
-            Ongoing UX and UI design for a concert + travel booking platform, including mobile bandmate
-            social flows, desktop trip-building, and component design for future features.
-          </p>
-          <div class="project-tags">
-            <p><strong>Project Type:</strong> UI/UX Design – Mobile + Desktop Screens</p>
-            <p><strong>Role:</strong> Sole UX/UI Researcher + Interaction Strategist</p>
-            <p><strong>Industry:</strong> Travel &amp; Tourism / Social Media</p>
-            <p><strong>Tools:</strong> Figma, Illustrator, TestFlight, Slack</p>
+        <article class="project-card split-layout">
+          <img
+            src="assets/images/house-of-rock-thumbnail.svg"
+            alt="House of Rock social travel platform UX screens preview"
+            class="project-thumb"
+          />
+
+          <div class="project-info">
+            <h2>House of Rock</h2>
+            <p class="project-summary">
+              Ongoing UX and UI design for a concert + travel booking platform, including mobile
+              bandmate social flows, desktop trip-building, and component design for future features.
+            </p>
+            <div class="project-tags">
+              <p><strong>Project Type:</strong> UI/UX Design – Mobile + Desktop Screens</p>
+              <p><strong>Role:</strong> Sole UX/UI Researcher + Interaction Strategist</p>
+              <p><strong>Industry:</strong> Travel &amp; Tourism / Social Media</p>
+              <p><strong>Tools:</strong> Figma, Illustrator, TestFlight, Slack</p>
+            </div>
+            <a href="house-of-rock.html" class="view-button">View Case Study</a>
           </div>
-          <a href="house-of-rock.html" class="view-button">View Case Study</a>
         </article>
 
       </div>
@@ -110,3 +131,4 @@
 
 </body>
 </html>
+
