--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
           <img
             src="assets/images/house-of-rock-thumbnail.svg"
             alt="House of Rock social travel platform UX screens preview"
-            class="project-thumb"
+            class="project-thumb project-thumb--house-of-rock"
           />
+
 
           <div class="project-info">
             <h2>House of Rock</h2>
