--- a/index.html
+++ b/index.html
@@ -75,16 +75,15 @@
 
        
 
-        <!-- HOUSE OF ROCK -->
-        <article class="project-card split-layout">
-          <img
-            src="assets/images/house-of-rock-thumbnail.svg"
-            alt="House of Rock social travel platform UX screens preview"
-            class="project-thumb project-thumb--house-of-rock"
-          />
-
-
-          <div class="project-info">
+       <!-- HOUSE OF ROCK -->
+      <article class="project-card split-layout split-layout--reverse">
+        <img
+          src="assets/images/house-of-rock-thumbnail.svg"
+          alt="House of Rock social travel platform UX screens preview"
+          class="project-thumb project-thumb--house-of-rock"
+        />
+     
+       <div class="project-info">
             <h2>House of Rock</h2>
             <p class="project-summary">
               Ongoing UX and UI design for a concert + travel booking platform, including mobile
